# genesum

./: CMakeLists.txt  Readme.md
include/: TranscriptGeneMap.hpp
src/: CMakeLists.txt  GeneSum.cpp
